src/objects/Macroprofil__c.object
<CustomObject>
    <description>Un template de Profil Réseau. L&apos;instanciation d&apos;un macro-profil pour un PUDO créé un profil réseau.
Il s’agit d’un ensemble prédéfini de réseaux ayant une réalité métier correspondant à des Services.</description>
    <fields>
        <fullName>Operateur__c</fullName>
        <description>Ce champ permet de gérer la visibilité des données de macropprofil entre les opérateurs.</description>
        <label>Opérateur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_OPE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LOV_GLO_PAY</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceExterne__c</fullName>
        <externalId>true</externalId>
        <label>Réference Externe</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Macroprofil</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operateur__c</columns>
        <columns>Pays__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>MP_BNL</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>Pays__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_BNL</value>
        </filters>
        <label>BNL</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_CHE</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>Pays__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_CHE</value>
        </filters>
        <label>CHE</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_CZE</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>Pays__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_CZE</value>
        </filters>
        <label>CZE</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_FRA</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>Pays__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>PUS_FR</value>
        </filters>
        <label>FRA</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MP_HUN</fullName>
        <columns>NAME</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Operateur__c</columns>
        <columns>Pays__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operateur__c</field>
            <operation>equals</operation>
            <value>DPD_HUN</value>
        </filters>
        <label>HUN</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Nom du Macroprofil</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Macroprofils</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>